--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ FLASK_APP=app
 FLASK_ENV=development
 
 # Once you add your API key below, make sure to not share it with anyone! The API key should remain private.
-OPENAI_API_KEY=abc-123
+OPENAI_API_KEY=sk-proj-Y8cksUFqI2WLaws2VJkIT3BlbkFJ8J2mo4oG4J07p47KNMEm
